--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.ebi.pride.gui</groupId>
     <artifactId>pride-inspector</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.0</version>
+    <version>2.1.1</version>
     <name>pride-inspector</name>
     <url>http://code.google.com/p/pride-toolsuite/wiki/PRIDEInspector</url>
 
@@ -13,10 +13,10 @@
         Build Note:
 
         To build desktop version, you need
-        mvn -P pi-desktop-build clean package
+        mvn -P pi-desktop-build,env-public clean package
 
         To build web start version, you must use command and use:
-        mvn -P pi-webstart-build,webstart clean package
+        mvn -P pi-webstart-build,,env-public,webstart clean package
 
     -->
 
