fixed a bug in MzIdentMLControllerImpl

--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>ms-data-core-api</artifactId>
-    <version>0.11.17-SNAPSHOT</version>
+    <version>0.11.26-SNAPSHOT</version>
     <name>Open-source Data Model for computational proteomics</name>
 
 
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>uk.ac.ebi.jmzml</groupId>
             <artifactId>jmzml</artifactId>
-            <version>1.7.1</version>
+            <version>1.7.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>lennart</groupId>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>uk.ac.ebi.jmzidml</groupId>
             <artifactId>jmzidentml</artifactId>
-            <version>1.1.8</version>
+            <version>1.1.10-SNAPSHOT</version>
         </dependency>
         <!-- Begin of the jmzReader Dependencies. MzML and Pride XML files will be parse
           with jaxb and jmzml directly in order to keep more matadata -->
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride.tools</groupId>
             <artifactId>mgf-parser</artifactId>
-            <version>1.3.4-SNAPSHOT</version>
+            <version>1.2.8</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride.tools</groupId>
@@ -199,6 +199,12 @@
             <artifactId>json</artifactId>
             <version>20090211</version>
         </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>xmlSchemaValidator</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -220,10 +226,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.2</version>
                 <configuration>
                     <excludes>
                         <exclude>**/db/*.java</exclude>
                     </excludes>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
             <plugin>
