--- a/pride-mod/trunk/pom.xml
+++ b/pride-mod/trunk/pom.xml
@@ -40,6 +40,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
